--- a/pom.xml
+++ b/pom.xml
@@ -185,4 +185,12 @@
 
 	</profiles>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/karstenroethig/actions-test</url>
+		</repository>
+	</distributionManagement>
+
 </project>
