--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - master
   release:
-    types: [published, created, edited]
+    types:
+      - created
 
 jobs:
   release:
@@ -27,9 +28,6 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
 
       - name: Publish package
         run: mvn --batch-mode deploy
