--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
 					</configuration>
 				</plugin>
 
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5</version>
+        </plugin>
+
 			</plugins>
 		</pluginManagement>
 
@@ -184,6 +190,13 @@
 		</profile>
 
 	</profiles>
+
+	<scm>
+    <url>http://github.com/karstenroethig/actions-test-lib</url>
+    <connection>scm:git:https://github.com/karstenroethig/actions-test-lib.git</connection>
+    <developerConnection>scm:git:https://github.com/karstenroethig/actions-test-lib.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
 	<distributionManagement>
 		<repository>
