--- a/pom.xml
+++ b/pom.xml
@@ -201,7 +201,7 @@
 	<distributionManagement>
 		<repository>
 			<id>github</id>
-			<name>GitHub Packages</name>
+			<name>GitHub karstenroethig Apache Maven Packages</name>
 			<url>https://maven.pkg.github.com/karstenroethig/actions-test-lib</url>
 		</repository>
 	</distributionManagement>
