--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>karstenroethig.actions-test-lib</groupId>
 	<artifactId>actions-test-lib</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Actions Test</name>
@@ -193,7 +193,7 @@
     <url>http://github.com/karstenroethig/actions-test-lib</url>
     <connection>scm:git:https://github.com/karstenroethig/actions-test-lib.git</connection>
     <developerConnection>scm:git:https://github.com/karstenroethig/actions-test-lib.git</developerConnection>
-    <tag>v1.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
 	<distributionManagement>
